Fix: Spacing around notice boxes
* assets/theme-css/notices.css:
(.notice): Set top/bottom margins to 1em.

* layouts/shortcodes/notice.html: Remove <br>.

Fixes <https://github.com/scientific-python/scientific-python-hugo-theme/issues/254>.

--- a/assets/theme-css/notices.css
+++ b/assets/theme-css/notices.css
@@ -1,6 +1,6 @@
 .notice {
-  margin-top: 0rem;
-  margin-bottom: 0rem;
+  margin-top: 1em;
+  margin-bottom: 1em;
   color: #666;
 }
 
